--- a/src/scss/gracile/variables.scss
+++ b/src/scss/gracile/variables.scss
@@ -57,6 +57,7 @@ $body-font-family: $base-font-family, $fallback-font-family !default;
 $html-font-size: 20px !default;
 $html-line-height: 1.5 !default;
 $font-size: .8rem !default;
+$font-size-sm: .7rem !default;
 
 // Responsive breakpoints
 $breakpoint-xs: 480px !default;
